With AddTagsLineEdit, the return key triggers an action and should be accepted, to prevent triggering the same event if the parent widget also listens for Return.

BUG: 289454